--- a/Accounting.UI/packages.config
+++ b/Accounting.UI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
@@ -21,6 +22,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net451" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
+  <package id="WebActivator" version="1.5" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
