--- a/Accounting.UI/Views/Web.config
+++ b/Accounting.UI/Views/Web.config
@@ -18,6 +18,10 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Accounting.UI" />
+        <add namespace="Accounting.Model.Model.Ledger"/>
+        <add namespace="Accounting.Model.Model.Transaction"/>
+        <add namespace="Accounting.UI.ViewModels"/>
+        <add namespace="Accounting.Model.Utility"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
