Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-midnight
 title: Basic Accounting
 description: Accounting made Easy
 show_downloads: true
