--- a/Accounting.UI/Accounting.UI.csproj
+++ b/Accounting.UI/Accounting.UI.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\LedgerAccountController.cs" />
     <Compile Include="Controllers\LedgerHeadController.cs" />
     <Compile Include="Controllers\LedgerTypeController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -179,6 +180,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CreateLedgerHeadViewModel.cs" />
     <Compile Include="ViewModels\CreateTransactionViewModel.cs" />
+    <Compile Include="ViewModels\DisplayTransactionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -267,6 +269,9 @@
     <Content Include="Views\LedgerAccount\Index.cshtml" />
     <Content Include="Views\LedgerAccount\Edit.cshtml" />
     <Content Include="Views\Transaction\Edit.cshtml" />
+    <Content Include="Views\Shared\FooterLedger.cshtml" />
+    <Content Include="Views\Transaction\List.cshtml" />
+    <Content Include="Views\Report\GenerateSQLScripts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
